--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@formatjs/intl-localematcher": "^0.4.0",
     "@types/node": "20.2.5",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
@@ -19,14 +20,17 @@
     "framer-motion": "^10.12.16",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
+    "negotiator": "^0.6.3",
     "next": "^13.4.5",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "server-only": "^0.0.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@types/negotiator": "^0.6.1",
     "tailwind-scrollbar": "^3.0.4"
   }
 }
